// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matrixToString Matrix diagonal line 1`] = `
"     -         + 
     5    0    5 
    
    ............O
+5  ...........O.
    ..........O..
    .........O...
    ........O....
    .......O.....
 0  ......O......
    .....O.......
    ....O........
    ...O.........
    ..O..........
-5  .O...........
    O............
    O............"
`;

exports[`matrixToString Matrix diagonal line without scale 1`] = `
"............O
...........O.
..........O..
.........O...
........O....
.......O.....
......O......
.....O.......
....O........
...O.........
..O..........
.O...........
O............
O............"
`;

exports[`matrixToString Matrix from -5 to 5 in both dimensions to string 1`] = `
"    -         +
    5    0    5
    
+5  O..........
    ...........
    ...........
    ...........
    ...........
 0  ..........O
    ...........
    ...........
    ...........
    ...........
-5  ...........
    O.........."
`;

exports[`matrixToString Matrix from -5 to 5 in both dimensions to string 2`] = `
"         +
    0    5
    
+5  .....O
    ....O.
    ......
    ......
    ......
 0  ......"
`;

exports[`matrixToString Matrix with a nice pattern to string 1`] = `
"         
      0  
    
    ..O..
    .O.O.
 0  O...O
    .O..O
    ....O"
`;

exports[`matrixToString empty Matrix to string 1`] = `"Matrix is empty"`;
